Added new methods: getFirs, getLast, getByName, getByAge.