@@ -1,6 +1,7 @@
 package networks.service;
 
 import networks.dao.UserDao;
+import networks.data.Database;
 import networks.model.User;
 
 import java.util.List;
@@ -14,6 +15,21 @@ public class UserService {
 
     public User getFirst() {
         UserDao userDao = new UserDao();
-        return userDao.getAll().get(0);
+        return userDao.getFirst();
+    }
+
+    public User getLast() {
+        UserDao userDao = new UserDao();
+        return userDao.getLast();
+    }
+
+    public User getByName(String name) {
+        UserDao userDao = new UserDao();
+        return userDao.getByName(name);
+    }
+
+    public User getByAge(int age) {
+        UserDao userDao = new UserDao();
+        return userDao.getByAge(age);
     }
 }
